# assignment2-systems

./: .gitignore  .gitmodules  pyproject.toml
cs336-basics/: pyproject.toml
cs336-basics/cs336_basics/: __init__.py
cs336-basics/cs336_basics/bpe_tokenizer/: __init__.py  tokenizer.py  trainer.py  utils.py
cs336-basics/cs336_basics/nn/: __init__.py  embedding.py  linear.py  multihead_self_attention.py  rmsnorm.py  rope.py  scaled_dot_product_attention.py  silu.py  softmax.py  swiglu.py  transformer.py  transformer_lm.py
cs336-basics/cs336_basics/optim/: __init__.py  adamw.py  lr_schedule.py  sgd.py
cs336-basics/cs336_basics/serialization/: __init__.py  checkpoint.py
cs336-basics/cs336_basics/utils/: __init__.py  data.py  decoding.py  device.py  function.py  gradient_clipping.py  logger.py  loss.py
cs336_systems/: benchmark.py  benchmarking_mixed_precision.py  benchmarking_script.py  plot_attention_comparison.py
cs336_systems/annotated/: __init__.py  scaled_dot_product_attention.py
cs336_systems/ddp/: ddp.py  fsdp.py  shared_optimizer.py
cs336_systems/scripts/: benchmark_attention.py  distributed_demo.py  mixed_precision_accumulation.py  plot_attention_boundary.py
cs336_systems/torch/: flash_forward.py  flashattention2.py
cs336_systems/triton/: flashattention2.py  weighted_sum.py
tests/: adapters.py  test_fsdp.py
